fix x text wrapping

--- a/listings/static/css/style.css
+++ b/listings/static/css/style.css
@@ -213,7 +213,6 @@ a {
 }
 
 .listing-content {
-	display: table;
 	width: 100%;
 }
 
